--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -345,3 +345,16 @@
 	pages = {692--699},
 }
 
+@article{Musaeus2025,
+	title = {Normal cerebral oxygen consumption and lactate levels in patients with {Alzheimer}'s disease and {Lewy} body dementia},
+	issn = {2509-2723},
+	doi = {10.1007/s11357-025-01658-x},
+	language = {eng},
+	journal = {GeroScience},
+	author = {Musaeus, Christian Sandøe and Waldemar, Gunhild and Kjær, Troels Wesenberg and Andersen, Birgitte Bo and Høgh, Peter and Hasselbalch, Steen Gregers and Lindberg, Ulrich and Frederiksen, Kristian Steen and Larsson, Henrik Bo Wiberg and Vestergaard, Mark B.},
+	month = apr,
+	year = {2025},
+	keywords = {Alzheimer’s disease, Hypometabolism, Lactate, Metabolism, Oxygen, Perfusion},
+}
+
+
