--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -357,4 +357,13 @@
 	keywords = {Alzheimer’s disease, Hypometabolism, Lactate, Metabolism, Oxygen, Perfusion},
 }
 
+@software{Vestergaard2026,
+  author    = {Vestergaard, Mark B.},
+  title     = {PCMCalculator: A Python GUI for Analyzing 2D Phase Contrast Mapping MRI Data to Measure Blood Flow},
+  year      = {2026},
+  publisher = {Zenodo},
+  version   = {v1.0.1},
+  doi       = {10.5281/zenodo.XXXXXXX},
+  url       = {https://doi.org/10.5281/zenodo.XXXXXXX}
+}
 
