--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -357,6 +357,22 @@
 	keywords = {Alzheimer’s disease, Hypometabolism, Lactate, Metabolism, Oxygen, Perfusion},
 }
 
+@article{Knudsen2024,
+	title = {Age-related decline in cerebral oxygen consumption in multiple sclerosis},
+	volume = {44},
+	issn = {0271-678X, 1559-7016},
+	url = {https://journals.sagepub.com/doi/10.1177/0271678X231224502},
+	doi = {10.1177/0271678X231224502},
+	language = {en},
+	number = {6},
+	urldate = {2025-04-10},
+	journal = {Journal of Cerebral Blood Flow \& Metabolism},
+	author = {Knudsen, Maria H and Vestergaard, Mark B and Lindberg, Ulrich and Simonsen, Helle J and Frederiksen, Jette L and Cramer, Stig P and Larsson, Henrik Bw},
+	month = jun,
+	year = {2024},
+	pages = {1039--1052},
+}
+
 @software{Vestergaard2026,
   author    = {Vestergaard, Mark B.},
   title     = {PCMCalculator: A Python GUI for Analyzing 2D Phase Contrast Mapping MRI Data to Measure Blood Flow},
